# ocr-web-app

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  nginx.conf  nginx.conf.template  render.yaml  start.sh
backend/: requirements.txt
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: corrections.py  export.py  ocr.py
backend/app/services/: correction_service.py  enhance_service.py  export_service.py  gemini_service.py  ocr_service.py
deploy/: aws-setup.sh
engine/: CMakeLists.txt
engine/include/: ocr_engine.h
engine/src/: bindings.cpp  ocr_engine.cpp  preprocessor.cpp
finetune/: evaluate.py  prepare_training_data.py  train.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: AnalysisPanel.jsx  DocumentChat.jsx  ExportPanel.jsx  ImageUpload.jsx  OCREditor.jsx
frontend/src/services/: api.js
